worked on search bar and frontend design

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <div class="card">
+        <div class="search">
+            <input type="text" placeholder="Enter City name" spellcheck="false">
+            <button><img src="images/search.png"></button>
+        </div>
+
+    </div>
 
 </body>
 
