--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="weather">
             <img src="images/rain.png" class="weather-icon">
-            <h1 class="temp">22°C</h1>
+            <h1 class="temp">22°c</h1>
             <h2 class="city">New York</h2>
             <div class="details">
                 <div class="col">
@@ -35,8 +35,26 @@
                 </div>
             </div>
         </div>
-
     </div>
+
+    <script>
+        const apiKey = "be31b0cd45ea3faeac71d82d242d9eb2";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=bangalore";
+
+        async function checkWeather() {
+            const response = await fetch(apiUrl + `&appid=${apiKey}`);
+            var data = await response.json();
+
+            console.log(data);
+            document.querySelector(".city").innerHTML = data.name;
+            document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
+            document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+            document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+
+        }
+        checkWeather();
+
+    </script>
 
 </body>
 
