--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" placeholder="Enter City Name" spellcheck="false">
+            <input type="text" placeholder="enter city name" spellcheck="false">
             <button><img src="images/search.png"></button>
         </div>
         <div class="weather">
@@ -49,7 +49,6 @@
             const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
             var data = await response.json();
 
-            console.log(data);
             document.querySelector(".city").innerHTML = data.name;
             document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
             document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
@@ -73,6 +72,7 @@
             else if (data.weather[0].main == "Snow") {
                 weatherIcon.src = "images/snow.png";
             }
+            document.querySelector(".weather").style.display = "block";
 
         }
 
